maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:31: error: not found: value keepHandWall
    keepHandWall()
    ^